Fixed styled spacing for navigation elements

--- a/src/app.css
+++ b/src/app.css
@@ -52,12 +52,15 @@ div.logo {
   color: black;
   font-size: 20px;
   font-weight: bold;
+  margin-right: 5vw;
 }
 
 div.pages {
   padding: 2vw;
   margin-top: 1vw;
-  margin-left: 3vw;
+  margin-right: 10vw;
+  display: flex;
+  column-gap: 3vw;
 }
 
 .slide {
@@ -167,5 +170,5 @@ footer {
 }
 
 span.test-reset{
-  margin-right: 10px;
+  margin-right: 90%;
 }
